# tardistest

./: Makefile  README.html  README.md  tardistest.cabal
src/: Bowling.lhs  Examples.hs  Main.hs
